--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,13 @@
 ## MySQL Configuration
 spring:
   datasource:
-    url: jdbc:mysql://172.17.0.15:3306/coredb?useSSL=false
+    url: jdbc:mysql://172.17.0.14:3306/coredb?useSSL=false
     username: myuser
     password: mypwd
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
