--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,28 @@
-
-## MySQL Configuration
+## H2 Configuration
 spring:
-  datasource:
-    url: jdbc:mysql://172.17.0.14:3306/coredb?useSSL=false
-    username: myuser
-    password: mypwd
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: create
-    properties:
+    h2:
+      console:
+        enabled: true
+        path: /gadget-console
+        settings:
+          trace: false
+          web-allow-others: false
+    datasource:
+      url: jdbc:h2:mem:gadget-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+      username: gadgetadmin
+      password: gadgetpwd
+    jpa:
+      database: default
+      show-sql: true
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
-        use_sql_comments: true
-        format_sql: true
+        ddl-auto: update
+      properties:
+        hibernate:
+          dialect: org.hibernate.dialect.H2Dialect
+          use_sql_comments: true
+          format_sql: true
 
 springdoc:
   swagger-ui:
-    path: /
+    path: /gadget-gallery
     operationsSorter: method
